--- a/src/assets/css/galleryPage.css
+++ b/src/assets/css/galleryPage.css
@@ -5,7 +5,8 @@
   margin-top: -150px;
   height: 100vh;
   width: 100%;
-  background-image: linear-gradient(to Top, #1b1f466e, #00000023), url("../img/gallery/galleryHero.png");
+  background-image: linear-gradient(to Top, #1b1f466e, #00000023),
+    url("../img/gallery/galleryHero.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -24,7 +25,7 @@
 }
 .galleryPage .hero .year {
   font-size: 53px;
-  color: #EBB849;
+  color: #ebb849;
   margin-top: 50px;
 }
 .galleryPage .hero .button {
@@ -49,21 +50,27 @@
   align-items: center;
 }
 .galleryPage .gallery-content .details .heading {
-  font-size: 52px;
-  color: #CDB071;
+  font-size: 35px;
+  color: #cdb071;
   text-transform: uppercase;
   margin-top: 50px;
   margin-bottom: 30px;
 }
 @media screen and (max-width: 769px) {
   .galleryPage .gallery-content .details .heading {
-    font-size: 32px;
+    font-size: 30px;
+  }
+  .responsive-font-display {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
 }
 .galleryPage .gallery-content .details .desc {
   font-size: 24px;
   line-height: 38px;
-  color: #ACACAC;
+  color: #acacac;
   width: 30%;
   text-align: center;
   margin-bottom: 75px;
@@ -78,7 +85,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   height: 62px;
   margin-bottom: 50px;
 }
@@ -89,10 +96,10 @@
   font-size: 16px;
   letter-spacing: 1.6px;
   line-height: 20px;
-  color: #00334E;
+  color: #00334e;
 }
 .galleryPage .gallery-content .grid-section .category-list .catItem.active {
-  color: #CDB071;
+  color: #cdb071;
 }
 @media screen and (max-width: 769px) {
   .galleryPage .gallery-content .grid-section .category-list .catItem {
@@ -150,4 +157,4 @@
 .imageItem img {
   width: 100%;
   height: 100%;
-}/*# sourceMappingURL=galleryPage.css.map */
+} /*# sourceMappingURL=galleryPage.css.map */
