--- a/src/assets/css/privacy.css
+++ b/src/assets/css/privacy.css
@@ -1,10 +1,11 @@
-.privacy{
-    padding: 20px;
-    font: normal normal normal 20px/28px Libre Caslon Display;
+.privacy {
+  padding: 20px;
+  font: normal normal normal 20px/28px Libre Caslon Display;
 }
 p {
-   text-align: justify !important;
+  text-align: justify;
 }
-h3, h4 {
-    color: #fff;
+h3,
+h4 {
+  color: #fff;
 }
